--- a/config.toml
+++ b/config.toml
@@ -4,47 +4,30 @@ paginate = 6
 theme = "portio"
 title = "Portio"
 [[menu.main]]
-name = "Contact"
+name = "Contact Us"
 url = "#contact"
 weight = 7
 [[menu.main]]
-name = "Blog"
-url = "#blog"
-weight = 6
-[[menu.main]]
-name = "Resume"
-url = "#resume"
-weight = 5
-[[menu.main]]
-name = "Work"
-url = "#portfolio"
-weight = 4
-[[menu.main]]
-name = "Service"
-url = "#service"
-weight = 3
-[[menu.main]]
 name = "About"
 url = "#about"
-weight = 2
+weight = 6
+
+[[menu.main]]
+name = "Services"
+url = "#service"
+weight = 3
+
 [[menu.main]]
 name = "Home"
 url = "#home"
 weight = 1
-[[menu.sitemap]]
-name = "Latest Article"
-url = "#"
-weight = 4
+
 [[menu.sitemap]]
 name = "Privacy & Policy"
 url = "#"
 weight = 3
 [[menu.sitemap]]
-name = "Frequently Ask Question"
-url = "#"
-weight = 2
-[[menu.sitemap]]
-name = "About me"
+name = "About Us"
 url = "about"
 weight = 1
 [params]
@@ -56,10 +39,10 @@ formspreeURL = "YOUR FORMSPREE URL"
 googleAnalytics = "YOUR GOOGLE ANALYTICS CODE"
 logo = "images/site-navigation/logo.png"
 [params.address]
-address = "23 Khan Niketon, Grand Street, NYK."
-email = "hello@example.com"
+address = "1604 Homestead Trail, Long Lake CO"
+email = "lynkllc@gmail.com"
 openingHours = "Open from 10am to 6pm (close at 5pm Sundays)"
-phone = "+(448) 833 5272 332"
+phone = "+(763) 5272 332"
 [params.map]
 APIkey = "YOUR GOOGLE MAP API"
 latitude = "23.7783741"
