--- a/data/aboutSection.yml
+++ b/data/aboutSection.yml
@@ -1,20 +1,17 @@
 ---
 enable: true
-topTitle: About
+topTitle: About Us 
 title: >
-  ## About me
+  ## Lynk Mission 
 
-  Enjoy team diversity and increase their networks among others people in
-  various fields by provided.
+  Create bespoke quantitative analysis soulutions for underserved and inneffecient marketplaces 
+  
 content: >
-  ### I design and build ultimate things.
+  ### We use cutting edge Data Warehousing Solutions 
 
-  I love to work in User Experience & User Interface designing. Because I love
-  to solve the design problem and find easy and better solutions to solve it. I always
-  try my best to make good user interface with the best user experience. I have been
-  working as a Visual designer from.
-button1Name: Hire me
-button2Name: Download CV
+  Lynk engages in quanitative data analysis, FIXX protocol development, and ROI Backtesting 
+button1Name: Request Consultation 
+button2Name: Download Earnings Report
 button1Target: contact
 button2Target: contact
-image: images/about/about-img.jpg
+image: images/about/gqimg.png
